# VenusScript

./: .gitignore  LICENSE  Language_Spec.md  README.md  install.ps1
examples/: features_test.vs  hello.vs  main.vs  showcase.vs  showcase_error.vs  stress_test.vs  test_from.vs
installer/src/: main.rs
venus_compiler/: Cargo.toml  test.vs
venus_compiler/crates/venus_analyzer/: Cargo.toml
venus_compiler/crates/venus_analyzer/src/: analyzer.rs  error.rs  eval.rs
venus_compiler/crates/venus_analyzer/src/stdlib/: std.vs
venus_compiler/crates/venus_lexer/: Cargo.toml
venus_compiler/crates/venus_lexer/src/: scanner.rs  token.rs
venus_compiler/crates/venus_parser/: Cargo.toml
venus_compiler/crates/venus_parser/src/: ast.rs  parser.rs
venus_compiler/src/: main.rs
venus_compiler/src/analyzer/: analyzer.rs  error.rs  eval.rs  fix.py  fix2.py  mod.rs  std.vs
venus_compiler/src/lexer/: scanner.rs  token.rs
venus_compiler/src/parser/: ast.rs  parser.rs
vscode-extension/: language-configuration.json  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: extension.ts
vscode-extension/syntaxes/: venusscript.tmLanguage.json
